# flatlake

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.backstage/: changelog.cjs  create_package.cjs  set_version.cjs  version.cjs  version_main_package.cjs
.cloudcannon/: prebuild
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: config.toml  go.mod  hugo.toml  package.json
docs/content/: _index.md
docs/content/docs/: _index.md  collections.md  global-config.md  installation.md  more.md
docs/data/: banner.yml  meta.yml  nav.yml
flatlake/: Cargo.toml  test.sh
flatlake/features/: aggregation.feature  base.feature  content.feature  flattened.feature  multi-paths.feature  outputs.feature  pagination.feature
flatlake/src/: lib.rs  logging.rs  main.rs  options.rs
flatlake/src/aggregates/: mod.rs
flatlake/src/dredger/: mod.rs
flatlake/src/listings/: mod.rs
flatlake/src/outflow/: mod.rs
flatlake/src/sampler/: mod.rs
flatlake/src/transformations/: mod.rs
inane/: Cargo.toml  test.sh
inane/features/: base.feature
inane/src/: lib.rs  main.rs
wrappers/node/: README.md  package.json
wrappers/node/LICENSE/: LICENSE
wrappers/node/lib/: index.js
