[package]
name = "flatlake"
version = "0.0.0"
edition = "2021"
include = ["/src", "/features", "/tests"]
description = "In the works."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
console = "0.15.1"
wax = "0.5.0"
futures = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "macros",
    "io-util",
] }
lol_html = "1.2"
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
schematic = { version = "0.11.8", features = ["yaml"] }
miette = { version = "5.10.0", features = ["fancy"] }
el-slugify = "0.1.1"
